--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ body {
 
 .carrd:hover {
     transform: translateY(-3px);
+    box-shadow: 5px 5px 25px 1px rgba(255, 255, 255, 0.4);
 }
 
 #title {
