Remove redundant 'Return Home' buttons from blog posts
Cleaned up blog post HTML files by removing duplicate 'Return Home' buttons and related markup, standardizing the use of <hr> for separation. Added a new blog entry template in templates/blog_entry.html for future posts.

Commit message authored by Copilot.

--- a/templates/blog_entry.html
+++ b/templates/blog_entry.html
@@ -23,25 +23,19 @@ layout: none
         </a>
         <div style="text-align: center;">
             <div id="title">
-                <h1>Incident DT-0001 &amp; Hydraulisc Power-Related Outages</h1>
+                <h1>Blog Entry Demo</h1>
             </div>
         </div>
     </header>
     <div style="padding-top: 100px;" id="bodycontainer">
-        <p>Welcome back to another Developers Digest.</p>
-        <p>Today's article is about "Incident DT-0001", but also goes over general downtime incidents and mitigations.</p>
+        <p>Hey there!</p>
+        <p>If you are new here, welcome to the Hydraulisc Blog (found @ <a href="https://blog.hydraulisc.net" target="_blank">blog.hydraulisc.net</a>).</p>
+        <p>This is the template for Blog entries.</p>
         <br>
-        <p>As many know, <a href="https://hydraulisc.net" target="_blank">Hydraulisc.net</a>'s main infrastructure is hosted in <a href="https://linkpen.xyz/SleepingAmi" target="_blank">SleepingAmi</a>'s bedroom. (Server 1, nickname AXIS)</p>
-        <br>
-        <p>This presents it's own set of challenges, and as such, incidents like DT-0001.</p>
-        <br>
-        <h2>Incident DT-0001</h2>
-        <p>Incident DT-0001 is a downtime incident, which occurred on the 21st of November, 2024. This is the first downtime incident caused by a power outage.</p>
-        <p>We have fail-safe's in place, such as a 2800W 3000 VA UPS (Uninterruptible Power Supply), for short, temporary power outages, but that is also used in the eventuality of a complete power failure to perform a quick save.</p>
-        <br>
-        <p>Additionally, The Main Hydraulisc Server has redundant backups (4 daily backups, once every <span title="5 and a half hours (approx)">~5.5 hours</span>).</p>
+        <p>This entry will be modified over time to include things like style shorthands and quick snippets that can be reused.</p>
     </div>
     <hr>
+    <!-- KEEP THESE; IMPORTANT -->
     {% include noscript.html %}
     {% include footer.html %}
 </body>
